--- a/README
+++ b/README
@@ -9,5 +9,13 @@
 |||||||||||||||||||||||||||||||||||||||||
 
 wiki: http://projects.dorkbot.org/dorkbot-wiki/DorkbotMdeWiki/unloquer
+wiki: http://wiki.unloquer.org/
+foro: https://comunidad.unloquer.org/
+web: https://unloquer.org/
+telegram: https://t.me/unloquer
+lista correo:
+  Subscribirse: https://lists.aktivix.org/mailman/listinfo/unloquer
+  info: https://www.mail-archive.com/unloquer@lists.aktivix.org/info.html
 irc.freenode.net #altred
+irc.freenode.net #un/loquer
 irc.goto10.org #un:loquer
